K8s/overlays/stage/SQL-patch.yaml
# PostgreSQL StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db-service
spec:
  serviceName: postgresql-db-service-stage
  selector:
    matchLabels:
      app: postgresql-db-service-stage
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-db-service-stage
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgresql-db-service-stage
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: post-ser-stage
        volumeMounts:
        - name: postgresql-db-stage
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: postgresql-db-stage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-storage
      resources:
        requests:
          storage: 1Gi
