K8s/overlays/stage/base-app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: stage-app
spec:
  selector:
    matchLabels:
      app: stage-app
  template:
    metadata:
      labels:
        app: stage-app
