K8s/overlays/stage/base-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-service
spec:
  selector:
    app: stage-app
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5000
