K8s/overlays/stage/sql-ser-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-db-service
spec:
  selector:
    app: postgresql-db-service-stage
  ports:
  - name: post-service
    protocol: TCP
    port: 5432
    targetPort: 5432
  clusterIP: None
